2013-03-15  Sebastian Huber <sebastian.huber@embedded-brains.de>

	* newlib/libc/stdio/findfp.c (glue_with_file): New.
	(__sfmoreglue): Use glue_with_file to avoid alignment problems.

2013-02-28  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/machine/setjmp.h (sigjmp_buf): Fix definition of
	sigjmp_buf size if _JBTYPE is defined.

2013-02-26  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/malloc.h (struct mallinfo): Convert type of all members
	to size_t to match all targets.

2013-02-20  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>
	    Joseph S. Myers <joseph@codesourcery.com>

	* libc/include/sys/_types.h (_ssize_t): Define as signed equivalent of
	size_t with GCC.

2013-02-19  Steve Ellcey  <sellcey@mips.com>

	* libc/machine/mips/memcpy.S: Fix USE_PREFETCH check.

2013-02-01  Nick Clifton  <nickc@redhat.com>

	* libc/sys/sysnecv850/crt0.S: Add recognition of the e3v5
	architecture variant.

2013-01-22  Joel Sherrill <joel.sherrill@oarcorp.com>

	* libc/include/pthread.h: Add PTHREAD_RWLOCK_INITIALIZER.
	Fix typo on PTHREAD_COJND_INITIALIZER.

2013-01-17  Marcus Shawcroft  <marcus.shawcroft@linaro.org>

	* libc/machine/aarch64/strncmp.S: Correct arithmetic for
	argument N values close to the maximum representable
	value in an unsigned 64 bit value.

2013-01-17  Marcus Shawcroft  <marcus.shawcroft@linaro.org>

	* libc/machine/aarch64/strnlen.S: Correct arithmetic for
	argument N values close to the maximum representable
	value in an unsigned 64 bit value.

2013-01-15  Nick Clifton  <nickc@redhat.com>

	* libc/sys/sysnecv850/crt0.S (_start): Enable FPU for the
	V850e2v3.

2013-01-12  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/string.h: Fix preprocessor expressions using
	_XOPEN_SOURCE.

2013-01-11  Corinna Vinschen  <vinschen@redhat.com>

	* libc/stdio/vfwprintf.c (_VFWPRINTF_R): Add code to correctly handle
	's' format specifier on not _MB_CAPABLE targets.  Fix a formatting